update contact us button

--- a/index1.html
+++ b/index1.html
@@ -61,7 +61,13 @@
                         an extra day for <span class="free">free</span>.
                     </p>
                     <div class="cta-container">
-                        <button>Contact Thato</button>
+                        <button onclick="{
+                            window.scrollTo({
+                                left:0,
+                                top:document.getElementById('contact-us').offsetTop
+                            })
+                            
+                        }">Contact Thato</button>
                         <button style="display: none;"><span>Book Now</span></button>
                     </div>
                     <div class="social-links">
