--- a/booking.html
+++ b/booking.html
@@ -63,7 +63,7 @@
 
             if (!response.ok) {
                 const errorMessage = await response.json()
-                throw new Error("Failed to get payment identifier", errorMessage);
+                throw new Error(`${response.status} , ${errorMessage.error}`);
             }
 
             const data = await response.json();
