--- a/auth.html
+++ b/auth.html
@@ -136,13 +136,9 @@
             <!-- Buttons for Email Registration -->
             <button type="button" id="emailRegisterButton">Register with Email</button>
             
-            <!-- Social Login Section -->
-            <div class="socials">
-                <button type="button" id="googleSignInButton">Sign in with Google</button>
-            </div>
             <div class="links">
                 <p id="auth-link">Already have an account? <a href="#" onclick="event.preventDefault(); handleToggle()" id="sign-up">Sign In Here</a></p>
-                <p>forgot password? <a href="#" id="sign-up">Click Here</a></p>
+                <p id="forgot-password-btn">forgot password? <a href="#" id="forgot-password">Click Here</a></p>
             </div>
         </form>
         <script async type="module" src="./javascript/auth_index.js"></script>
