update auth functionality

--- a/manage_booking.html
+++ b/manage_booking.html
@@ -107,6 +107,7 @@
     <main>
         <section class="booking-container">
             <h1>Manage Booking</h1>
+            <div id="emailVer"></div>
             <table>
                 <tr>
                     <th>Date</th>
