--- a/booking.html
+++ b/booking.html
@@ -83,7 +83,29 @@
         @media (max-width:800px) {
             header {
                 padding: 8px 5vw;
-            }        
+            }   
+            
+            header .logo a {
+                height: 50px;
+                overflow: hidden;
+            }
+
+            header .logo a img {
+                height: 65px;
+                width: 100px;
+            }
+        }
+
+        @media (max-height:800px){
+            header {
+                background-color: #fff;
+            }
+            main {
+                align-items: normal;
+                padding: 128px 0;
+                height: fit-content;
+
+            }
         }
 
         @media (max-width:650px) {
@@ -133,6 +155,5 @@
     </main>
    
     <script type="module" src="./javascript/booking.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
 </body>
 </html>
