fix the href link of logo in all pages

--- a/manage_booking.html
+++ b/manage_booking.html
@@ -156,7 +156,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="./index.html">
+            <a href="index.html">
                 <img src="./images/logo/IMG-20240311-WA0002-removebg-preview(1).png" alt="Logo">
             </a>
         </div>
