--- a/booking.html
+++ b/booking.html
@@ -131,7 +131,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="/index.html">
+            <a href="index.html">
                 <img src="./images/logo/IMG-20240311-WA0002-removebg-preview(1).png" alt="">
             </a>
         </div>
