--- a/manage_booking.html
+++ b/manage_booking.html
@@ -151,6 +151,42 @@
                 padding: 0;
             }
         }
+
+        .loader-container {
+            position: absolute;
+            width: 100vw;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 100;
+            background: linear-gradient(rgba(240,240,240,0.8),rgba(240,240,240,0.8));
+            transform: scale(0);
+        }
+
+        .loader-container.show {
+            transform: scale(1);
+        }
+
+        .loader-container .loader {
+            border: 6px solid #f3f3f3; /* Light gray */
+            border-top: 6px solid #3498db; /* Blue */
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            animation: spin 1s linear infinite;
+
+        }
+
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg);
+            }
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+
     </style>
 </head>
 <body>
@@ -162,6 +198,9 @@
         </div>
     </header>
     <main>
+        <div class="loader-container">
+            <div class="loader"></div>
+        </div>
         <div id="cancel-modal">
             <p>Are you sure you want to cancel the booking?</p>
             <div class="controls">
