adding headers to the code

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#" class="nav-link">Financial calculator</a></li>
-                <li><a href="#" class="nav-link">Stragh line</a></li>
+                <li><a href="./financialMaths/index.html" class="nav-link">Financial calculator</a></li>
+                <li><a href="./straightLine/index.html" class="nav-link">Stragh line</a></li>
                 <li><a href="#" class="nav-link">Data Analysis</a></li>
             </ul>
         </nav>
