--- a/straightLine/index.html
+++ b/straightLine/index.html
@@ -6,7 +6,22 @@
     <title>Straight line</title>
 </head>
 <body>
+    <header>
+        <div class="logo">
+            <span>
+                Calculators
+           </span>    
+        </div>
+        <nav>
+            <ul>
+                <li><a href="./financialMaths/index.html" class="nav-link">Financial calculator</a></li>
+                <li><a href="./straightLine/index.html" class="nav-link">Stragh line</a></li>
+                <li><a href="#" class="nav-link">Data Analysis</a></li>
+            </ul>
+        </nav>
+    </header>
     <main>
+        <h1>Straight Line</h1>
         <div class="container">
             <div class="group">
                 <label for="option">Type</label>
